--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,17 @@ body {
     font-family: 'M PLUS Rounded 1c', sans-serif;
     background-color: pink;
 }
-
+header{
+    overflow: hidden;
+}
 #header-content {
     position: relative;
     overflow: hidden;
     width: 100vw;
     height: 100vh;
     top: 0;
+    font-size: 0;
+    padding: 0;
 }
 
 #header-content div {
@@ -20,101 +24,70 @@ body {
     width: 100vw;
     height: 130vh;
     top: -20vh;
-}
-/*
-@media (max-width: 360px){
-#par_1 {
     opacity: 0;
+    right: auto;
+    left: auto;
+    margin: 0;
 }
-
-#par_2 {
-    opacity: 0;
-}
-
-#par_3 {
-    opacity: 0;
-}
-
-
-#par_4 {
-    background-image: url(../img/header/spaceship.svg);
-}
-}
-
-@media (min-width: 361px) {
-    #par_4 {
-        background-image: url(../img/header/void.svg);
-    }
+div#smartphone {
+    opacity: 1;
+    background-image: url(../img/header/m480.svg);
 }
 
 @media (min-width: 1024px) {
-    #par_1 {
-        background-image: url(../img/header/back_void.svg);
+    div#par_1 {
+        background-image: url(../img/header/forrest_1.svg);
         opacity: 1;
     }
-    #par_2 {
-        background-image: url(../img/header/back_earth.svg);
+    div#par_2 {
+        background-image: url(../img/header/forrest_2.svg);
         opacity: 1;
-
-        top: 20%;
     }
-    #par_3 {
-        background-image: url(../img/header/back_elevator.svg);
+    div#par_3 {
+        background-image: url(../img/header/forrest_3.svg);
         opacity: 1;
-        top: 40%;
-        z-index: 1;
     }
-    #par_4 {
+    div#par_4 {
+        background-image: url(../img/header/forrest_4.svg);
+        opacity: 1;
+    }
+    div#par_5 {
+        background-image: url(../img/header/forrest_5.svg);
+        opacity: 1;
+    }
+    div#par_6 {
+        background-image: url(../img/header/forrest_6.svg);
+        opacity: 1;
+    }
+    div#par_7 {
+        background-image: url(../img/header/forrest_7.svg);
+        opacity: 1;
+    }
+    div#par_8 {
+        background-image: url(../img/header/forrest_8.svg);
+        opacity: 1;
+    }
+    div#par_9 {
+        background-image: url(../img/header/forrest_9.svg);
+        opacity: 1;
+        top: -29vh;
+    }
+    div#smartphone {
         opacity: 0;
     }
 }
-*/
-#par_1{
-    background-image: url(../img/header/forrest_1.svg);
-}
-#par_2{
-        background-image: url(../img/header/forrest_2.svg);
 
-}
-#par_3{
-        background-image: url(../img/header/forrest_3.svg);
-
-}
-#par_4{
-        background-image: url(../img/header/forrest_4.svg);
-
-}
-#par_5{
-        background-image: url(../img/header/forrest_5.svg);
-
-}
-#par_6{
-        background-image: url(../img/header/forrest_6.svg);
-top: 5vh;
-}
-#par_7{
-        background-image: url(../img/header/forrest_7.svg);
-}
-#par_8{
-        background-image: url(../img/header/forrest_8.svg);
-}
-div#par_9{
-        background-image: url(../img/header/forrest_9.svg);
-    top: -29vh;
-}
 section {
     height: 200vh;
     background-color: #000d27;
     position: relative;
-    z-index: 90;
+/*    z-index: 90;*/
 }
 
-#main-nav {
-}
+#main-nav {}
 
 #main-nav button {
     background-color: white;
 }
 
-#main-nav a {
-}
+#main-nav a {}
