--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,12 @@ p {
     article {
         font-size: 23px;
     }
+    article a{
+        color: inherit;
+    }
+    article a:hover{
+        color: inherit;
+    }
     section#skills {
         padding-top: 15vh;
         padding-bottom: 15vh;
