--- a/css/style.css
+++ b/css/style.css
@@ -164,13 +164,14 @@ section#skills #my-skills > .row div figure img {
     color: black;
     text-decoration: underline;
 }
-#my-projects #cyberpunkers-generator a img{
+#my-projects .project a img{
     max-width: 100%;
     border: 5px solid lightgrey;
     border-radius: 30px;
     transition-duration: 1s;
+    overflow: hidden;
 }
-#my-projects #cyberpunkers-generator a img:hover{
+#my-projects .project a img:hover{
     transform: scale(1.05);
 }
 
